# magfy

./: .clang-format  .gitignore  CMakeLists.txt  CONFIGURATION.md  LICENSE  README.md
debug/: config_gnome.yaml  config_windows.yaml  magfy_gnome.yaml
manifest/: magfy.manifest
script/windows/: create_certificate.bat  sign.bat
src/: main.cpp
src/backend/: Magnifier.h  magnifiers.h
src/backend/gnome/: Magnifier.cpp  Magnifier.h
src/backend/windows/: Magnifier.cpp  Magnifier.h
src/config/: Config.cpp  Config.h
src/core/: core.h
src/core/windows/: core.cpp
src/core/x11/: core.cpp
src/translate/: translate.cpp  translate.h
src/translate/windows/: translate.cpp
src/translate/x11/: translate.cpp
